# pipeline.material

./: MANIFEST.in  README.md  history.txt  makefile  setup.cfg
.github/workflows/: pep257.yml  py2.yml  py3.yml
pipeline_material/: __init__.py
tests/docker/: build.cmd  py2.docker  test.cmd
tests/test/: __init__.py  test_material.py
