[metadata]
name = pipeline_material
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Pipeline material class for static integrity calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.material
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.material/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_material
